Bug 1515658 - ChannelMediaResource should use the BlobURLs' length when known. r=jya, a=RyanVM

--HG--
extra : source : 9c9f8232272eda52a244059234f6f3ca9fc2afdd